--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ img_path: /Jalpc/static/assets/img/blog  # url should be '/homepage/static/asset
 
 # author -- index page "about me" section
 author:  # change following line to your infomation.
-  name: 박춘경  # Be used at blog posts' author.
-  first_name: 춘경  # Be used at index page about me section.
-  last_name: 박  # Be used at index page about me section.
+  name: jjun  # Be used at blog posts' author.
+  first_name: 개발자  # Be used at index page about me section.
+  last_name: 의심많은  # Be used at index page about me section.
   avatar: \static\assets\img\profile\profile.jpg  # upload your avatar at directory and edit it.
   github_username: butSimple  # Leave blank if you don't have now
   #linkedin_id: jarrekk # Leave blank if you don't have now
@@ -28,7 +28,7 @@ author:  # change following line to your infomation.
   skill_icon2:
     - name: fa-linux
     - name: icon-apache
-  desc: Introduce myself will be here.  # Describe yourself.
+  desc: 고민을 공유하면서 같이 성장합니다.  # Describe yourself.
 
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
